make padding look better

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -193,7 +193,7 @@
       </div>
     </div>
       
-   <div style="float:left; padding-right: 10px;">
+   <div style="float:left;">
     <div class="dropdown" style="float:left;">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fa fa-calendar"></i>
@@ -223,14 +223,14 @@
     </div>
     </div>
 
-    <div style="float:left;  padding-right: 10px;">
+    <div style="float:left; padding-left: 10px; padding-right: 10px;">
       <button class="btn btn-success" type="submit">
         <i class="fa fa-search"></i>Search ClassMaps
       </button>
     </div>
   </form>
 
-    <div style="float: right; margin: auto;">
+  <div style="float: right; margin: auto; padding-right: 10px;">
     <p style="color: #ffffff;">Welcome, {{netid}}</p>
     <button class="astext" id="Logout">
         Sign Out
