should be always hidden

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -265,8 +265,8 @@ function off() {
 var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
 console.log(width);
 if(width > 720){
- var x = document.getElementById("listOverlay");
- x.style.display = "block";
+//  var x = document.getElementById("listOverlay");
+//  x.style.display = "block";
 }
   
 $('.dropdown-menu').on('click', function(e) {
