fixed overlay rendering

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -137,6 +137,7 @@
     /* Start saved list css */
     .listOverlay {
       position: fixed;
+      display: none;
       width: 300px;
       height: 50%;
       top: 1;
@@ -238,7 +239,7 @@
   </div>
  </div>
  <!-- overlay div ends -->
- <div id="listOverlay" class="listOverlay" style="overflow: auto;" onclick="off()">
+ <div id="listOverlay" class="listOverlay" style="overflow: auto;">
    <table id="myTable" class="table order-list">
    <thead>
        <tr>
@@ -258,15 +259,11 @@
 </div>
 <!--  script for saved list  -->
 <script>
-function off() {
-   var x = document.getElementById("listOverlay");
-   x.style.display = "none";
-}
 var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
 console.log(width);
 if(width > 720){
-//  var x = document.getElementById("listOverlay");
-//  x.style.display = "block";
+ var x = document.getElementById("listOverlay");
+ x.style.display = "block";
 }
   
 $('.dropdown-menu').on('click', function(e) {
