--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -181,10 +181,12 @@
      <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:52px; float:left;" hspace="10">
      </a>
 <!--     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> -->
-    <div style="width:35%; float:left; padding-right: 10px;">
+    <div style="width:30%; float:left; padding-right: 10px;">
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
-
+    
+    <hr style="width: 1px; height: 20px; display: inline-block;">
+      
     <div style="width:120px; float:left; padding-right: 10px;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
         <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white;" readonly>
