--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div id="resultList" style="margin-left:10%; margin-right:10%; margin-bottom: 20px;">
     <div style="clear: both">
-        <h4 style="color: white; style="float: left">Results for: "{{q}}"</h4>
-        <h6 style="color: white; style="float: left"> {{d}} {{t}}</h6>
+        <h4 style="color: white; display:inline;">Results for: "{{q}}"</h4>
+        <h6 style="color: white; display:inline;"> {{d}} {{t}}</h6>
     </div>
     <hr />
 <ul class ="collection">
