Changed location icon

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -410,7 +410,7 @@ mymap.locate({setView: true, maxZoom: 15});
     map.zoomControl.setPosition('bottomright');
 
 
-L.easyButton('<img src="https://image.flaticon.com/icons/svg/24/24211.svg" style="width:16px">', function (btn, map) {
+L.easyButton('<img src="https://cdn1.iconfinder.com/data/icons/map-location-and-navigation-1/96/location_pointer_map_address_navigation_navigation_current_position-512.png" style="width:16px">', function (btn, map) {
 
     map.locate({
         setView: true,
