--- a/classes/templates/classes/layout.html
+++ b/classes/templates/classes/layout.html
@@ -26,7 +26,7 @@
     <meta name="theme-color" content="#ffffff">
     <title>ClassMaps</title>
 </head>
-<body bgcolor="#A9A9A9">
+<body bgcolor="#696969">
         {% block content %}
         {% endblock %}
 </body>
