--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -187,9 +187,12 @@
 
     <div style="width:120px; float:left; padding-right: 10px;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
-        <span class="input-group-addon">
+<!--         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
-        </span>
+        </span> -->
+        <button type="button" data-toggle="dropdown">
+          <i class="fa fa-clock"></i>
+        </button>
         <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white;" readonly>
       </div>
     </div>
