--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -618,7 +618,7 @@ if (!jQuery.isEmptyObject(lonlats)) {
         var type = "c";
         // modified this line to add parameters
 
-        var name = "{{c}} {{c.building}} {{c.room}} {{c.day}} {{c.starttime}}-{{c.endtime}}";
+        var name = "{{c}} {{c.building}} {{c.room}} {{c.day}} {{c.time}}";
        if (!lon && !lat) {
           lon = -74.656509;
           lat = 40.346699;
