--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -154,12 +154,12 @@
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
 
-    <div style="width:120px; float:left; padding-right: 10px;">
+    <div style="width:90px; float:left; padding-right: 10px;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
 <!--         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
         </span> -->
-        <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white;" readonly>
+        <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white; cursor: pointer;" readonly>
       </div>
     </div>
 
