--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -159,7 +159,7 @@
 <!--         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
         </span> -->
-        <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white; cursor: pointer;" readonly>
+        <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
       </div>
     </div>
 
