--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -403,7 +403,7 @@ L.easyButton('<img src="https://cdn1.iconfinder.com/data/icons/map-location-and-
     map.on('locationfound', onLocationFound);
 }).setPosition('bottomright').addTo(map);
 
-L.easyButton('<img src="https://png.icons8.com/metro/1600/home.png" style="width:16px">', function(btn, map){
+L.easyButton('<img src="http://simpleicon.com/wp-content/uploads/refresh.png" style="width:16px">', function(btn, map){
     map.setView(new L.LatLng(40.346825, -74.656595), 16);
 //map.setView(        [40.347, -74.653],      zoom: 16);
 }).setPosition('bottomright').addTo(map);
