--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -225,7 +225,7 @@
   <div style="float: right; margin: auto; padding-right: 10px;">
 <!--     <p style="color: #ffffff;">Welcome, {{netid}}</p> -->
     
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
   </div>
  </div>
  <!-- overlay div ends -->
