--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -249,12 +249,12 @@
 </div>
 <!--  Code for sidebar overlay  -->
    <div id="sideOverlay" class="sideOverlay" style="overflow: auto;">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a>Welcome, {{netid}}</a>
-    <a href="#">About</a><br>
-    <a href="#">Help</a><br>
-    <a href="#">Feedback</a><br>
-    <a href="#">Contact</a><br>
+    <a href="#">About</a>
+    <a href="#">Help</a>
+    <a href="#">Feedback</a>
+    <a href="#">Contact</a>
     <button class="astext" id="Logout">
         Sign Out
     </button>
