--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -225,7 +225,7 @@
   <div style="float: right; margin: auto; padding-right: 10px;">
 <!--     <p style="color: #ffffff;">Welcome, {{netid}}</p> -->
     
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776;</span>
   </div>
  </div>
  <!-- overlay div ends -->
@@ -255,9 +255,10 @@
     <a href="#">Help</a>
     <a href="#">Feedback</a>
     <a href="#">Contact</a>
-    <button class="astext" id="Logout">
+    <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
+<!--     <button class="astext" id="Logout">
         Sign Out
-    </button>
+    </button> -->
   </div>
 <!-- sidenav script  -->
 <script>
