--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -103,7 +103,7 @@
     .sideOverlay {
       position: fixed;
       display: none;
-      width: 250px;
+      width: 20%;
       height: 100%;
       top: 0;
       left: 1;
