--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -251,10 +251,10 @@
    <div id="sideOverlay" class="sideOverlay" style="overflow: auto;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a>Welcome, {{netid}}</a>
-    <a href="#">About</a>
-    <a href="#">Help</a>
-    <a href="#">Feedback</a>
-    <a href="#">Contact</a>
+    <a href="https://classmaps.herokuapp.com/about.html">About</a>
+    <a href="https://classmaps.herokuapp.com/help.html">Help</a>
+    <a href="https://classmaps.herokuapp.com/feedback.html">Feedback</a>
+    <a href="https://classmaps.herokuapp.com/contact.html">Contact</a>
     <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
 <!--     <button class="astext" id="Logout">
         Sign Out
