--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -220,9 +220,7 @@
     </div>
   </form>
 
-  <div style="float: right; margin: auto; padding-right: 10px;">
-<!--     <p style="color: #ffffff;">Welcome, {{netid}}</p> -->
-    
+  <div style="float: right; margin: auto; padding-right: 10px;">    
     <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776;</span>
   </div>
  </div>
@@ -249,14 +247,11 @@
    <div id="sideOverlay" class="sideOverlay" style="overflow: auto;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a>Welcome, {{netid}}</a>
-    <a href="https://classmaps.herokuapp.com/about.html">About</a>
+    <a href="https://andsylin.github.io/">About</a>
     <a href="https://classmaps.herokuapp.com/help.html">Help</a>
-    <a href="https://classmaps.herokuapp.com/feedback.html">Feedback</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link">Feedback</a>
     <a href="https://classmaps.herokuapp.com/contact.html">Contact</a>
     <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
-<!--     <button class="astext" id="Logout">
-        Sign Out
-    </button> -->
   </div>
 <!-- sidenav script  -->
 <script>
@@ -314,11 +309,6 @@ $("table.order-list").on("click", ".ibtnDel", function (event) {
    });
 </script>
 
-<script type="text/javascript">
-document.getElementById("Logout").onclick = function () {
-    location.href = "https://classmaps.herokuapp.com/accounts/logout";
-};
-</script>
   <script>
     // Adds different layer groups
     var printers = L.layerGroup();
