--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -590,8 +590,12 @@ if (!jQuery.isEmptyObject(lonlats)) {
     var lon = parseFloat(tokens[0])-offset;
     var lat = tokens[1];
     if (lon) {
+      {% if zoom %}
         L.marker([lat, lon], {icon: savedIcon}).addTo(map).bindPopup(lonlats[key]).openPopup();
         map.setView([lat, parseFloat(lon)+offset],17);
+      {% else %}
+        L.marker([lat, lon], {icon: savedIcon}).addTo(map).bindPopup(lonlats[key]).openPopup();
+      {% endif %}
     }
   }
 }
