--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -15,7 +15,7 @@
     {% endif %}
     {% if classes %}
         {% for c in classes %}
-            <li class="collection-item"><a href="/courses/{{c.pk}}">{{c}}</a></li>
+            <li class="collection-item"><a href="/courses/{{c.pk}}">{{c}} {{c.title}} {{c.section}}</a></li>
         {% endfor %}
     {% endif %}
     {% if not classes and not buildings %}
