--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -205,7 +205,7 @@ $(function() {
         <input id = "search" name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
 
-    <div style="width:90px; float:left; padding-right: 10px;">
+    <div style="width:85px; float:left; padding-right: 10px;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
 <!--         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
@@ -251,7 +251,7 @@ $(function() {
     </div>
   </form>
 
-  <div style="float: right; margin: auto; padding-right: 10px;">
+  <div style="float: right; margin: auto; padding-right: 10px; padding-bottom: 5px">
     <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776;</span>
   </div>
  </div>
