--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -271,9 +271,9 @@ $(function() {
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a>Welcome, {{netid}}</a>
     <a href="https://andsylin.github.io/">About</a>
-    <a href="https://classmaps.herokuapp.com/help.html">Help</a>
+    <a href="#">Help</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link">Feedback</a>
-    <a href="https://classmaps.herokuapp.com/contact.html">Contact</a>
+    <a href="https://andsylin.github.io/members/">Contact</a>
     <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
   </div>
   
