--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -22,12 +22,12 @@
   <script type="text/javascript" src="{% static 'classes/laundry.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/hotspots.js' %}"></script>
 
+  <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.js' %}"></script>
 
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js" type="text/javascript"></script>
 
 
 <head bgcolor="#000000">
