--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -613,7 +613,7 @@ if (!jQuery.isEmptyObject(lonlats)) {
     var lon = parseFloat(tokens[0])-offset;
     var lat = tokens[1];
     if (lon) {
-        L.marker([lat, lon], {icon: savedIcon}).addTo(map).bindPopup(lonlats[key]).openPopup();
+        L.marker([lat, lon], {icon: savedIcon}).addTo(map).bindPopup(lonlats[key]);
     }
   }
   {% if last_lon %}
