--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -4,6 +4,7 @@
 <script>
     var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
     if(width < 720){
+        console.log(width);
         document.getElementById("sideOverlay").style.marginRight = "4px";
         document.getElementById("sideOverlay").style.marginLeft = "4px";
     }
