--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -5,8 +5,8 @@
     var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
     if(width < 720){
         console.log(width);
-        document.getElementById("sideOverlay").style.marginRight = "4px";
-        document.getElementById("sideOverlay").style.marginLeft = "4px";
+        document.getElementById("resultList").style.marginRight = "4px";
+        document.getElementById("resultList").style.marginLeft = "4px";
     }
 </script>
 <div id="resultList" style="margin-left:10%; margin-right:10%; margin-bottom: 20px;">
