--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -11,7 +11,7 @@
 
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
@@ -164,6 +164,12 @@
     .slider {
       padding-left: 20px;
     }
+    .ui-autocomplete {
+      width: 20%;
+      height: 40%;
+      overflow-y: auto;
+      font-size: small;
+    }
   </style>
 </head>
 
@@ -277,7 +283,7 @@ $(function() {
     <a href="https://andsylin.github.io/members/">Contact</a>
     <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
   </div>
-  
+
 <!-- sidenav script  -->
 <script>
   function openNav() {
@@ -287,7 +293,7 @@ $(function() {
       document.getElementById("sideOverlay").style.display = "none";
   }
 </script>
-  
+
 <!--  script for saved list  -->
 <script>
 var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
