--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -63,7 +63,7 @@
       float: right;
       z-index: 2;
       padding-top: 1%;
-      background-color:rgba(0,0,0,.7); // Sets to 50% transparent;
+      background-color:rgba(0,0,0,0.7); // Sets to 50% transparent;
       pointer-events: auto;
     }
     .dropdown-menu{
@@ -114,7 +114,7 @@
       right: 0;
       bottom: 0;
       background-color: #d3d3d3;
-      background: linear-gradient(to top, rgba(211,211,211,0.5), rgba(211,211,211,1));
+      background: linear-gradient(to top, rgba(211,211,211,0.7), rgba(211,211,211,1));
       z-index: 3;
       cursor: pointer;
       transition: 0.5s;
@@ -148,7 +148,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: rgba(0,0,0,0.5);
+      background-color: rgba(0,0,0,0.7);
       z-index: 3;
       cursor: pointer;
     }
