--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -166,7 +166,8 @@
     }
     .ui-autocomplete {
       width: 20%;
-      height: 40%;
+      height: auto;
+      max-height: 40%;
       overflow-y: auto;
       font-size: small;
     }
