--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -193,7 +193,7 @@ $(function() {
 
   <div id="overlay" class="overlay">
     <form method="GET" action="{% url 'classes:search' %}">
-     <a href="http://classmaps.herokuapp.com">
+     <a href="https://classmaps.herokuapp.com">
      <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:52px; float:left;" hspace="10">
      </a>
 
