--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -446,7 +446,7 @@ L.easyButton('<img src="{% static 'classes/images/currentloc.png' %}" style="wid
     map.on('locationfound', onLocationFound);
 }).setPosition('bottomright').addTo(map);
 
-L.easyButton('<img src="https://simpleicon.com/wp-content/uploads/refresh.png" style="width:16px">', function(btn, map){
+L.easyButton('<img src="{% static 'classes/images/refresh.png' %}" style="width:16px">', function(btn, map){
     map.setView(new L.LatLng(40.346825, -74.656595), 16);
 //map.setView(        [40.347, -74.653],      zoom: 16);
 }).setPosition('bottomright').addTo(map);
