--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -249,7 +249,7 @@ $(function() {
     </div>
   </form>
 
-  <div style="float: right; margin: auto; padding-right: 10px; padding-bottom: 10px">
+  <div style="float: right; margin: auto; padding-right: 10px; padding-bottom: 14px">
     <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776;</span>
   </div>
  </div>
@@ -266,7 +266,7 @@ $(function() {
    <tfoot>
        <tr>
            <td colspan="5" style="text-align: left;">
-               <input type="button" class="btn btn-lg btn-block" id="export" value="Export to Calendar" />
+<!--                <input type="button" class="btn btn-lg btn-block" id="export" value="Export to Calendar" /> -->
            </td>
        </tr>
        <tr>
