--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -140,6 +140,7 @@
     }
     /* Start saved list css */
     .listOverlay {
+      border-radius: 8px;
       position: fixed;
       display: none;
       width: 300px;
