adjust list to float

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -140,7 +140,8 @@
     }
     /* Start saved list css */
     .listOverlay {
-      border-radius: 8px;
+      padding: 3px;
+      border-radius: 4px;
       position: fixed;
       display: none;
       width: 300px;
